feat 修改图片路径

--- a/docs/blogs/大数据/大数据处理.md
+++ b/docs/blogs/大数据/大数据处理.md
@@ -8,7 +8,7 @@
 
 数据源可基于文件、基于目录、基于TCP\UDP端口、基于HTTP、Kafka等采集 
 
-![image-20231115133153079](大数据处理.assets/image-20231115133153079.png)
+![image-20231115133153079](./大数据处理.assets/image-20231115133153079.png)
 
 三大组件:
 
@@ -24,7 +24,7 @@
 
 因为高的吞吐量和低延迟
 
-<img src="大数据处理.assets/image-20231107134256121.png" alt="image-20231107134256121"  />
+<img src="./大数据处理.assets/image-20231107134256121.png" alt="image-20231107134256121"  />
 
 #### hadoop  
 
