--- a/docs/blogs/大数据/大数据处理.md
+++ b/docs/blogs/大数据/大数据处理.md
@@ -31,8 +31,7 @@ categories:
 在大数据场景主要采用 Kafka 作为消息队列
 
 因为高的吞吐量和低延迟
-
-<img src="./大数据处理.assets/image-20231107134256121.png" alt="image-20231107134256121"  />
+![image-20231115133153079](./大数据处理.assets/image-20231107134256121.png) 
 
 #### hadoop  
 
