--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -15,9 +15,9 @@ categories:
 > 100倍数，可以用合约的50倍得到，也可以现货在低价的时候得到
 
 ## 指南
-1,合约买明确放量的(有庄建仓或出货)，或者买能吸引资金即将放量的(价值低估，利好，月线级别周期) ，盈亏比大的，周期级别大的（月>周>日）
-2,新,热点,利好往往翻倍最快，没套牢盘，能吸引资金，这是赚钱最快的方法了，一定要关注等待入场时机或者订单快挂单
-3,不能自已为是，不要有偏见，不要心存侥幸，而需要客观事实分析。
+1. 合约买明确放量的(有庄建仓或出货)，或者买能吸引资金即将放量的(价值低估，利好，月线级别周期) ，盈亏比大的，周期级别大的（月>周>日）
+2. 新,热点,利好往往翻倍最快，没套牢盘，能吸引资金，这是赚钱最快的方法了，一定要关注等待入场时机或者订单快挂单
+3. 不能自已为是，不要有偏见，不要心存侥幸，而需要客观事实分析。
 ##  架构
 
 PB和CPB出现在趋势中，趋势关注回撤的弱势
