--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -18,6 +18,11 @@ categories:
 1. 合约买明确放量的(有庄建仓或出货)，或者买能吸引资金即将放量的(价值低估，利好，月线级别周期) ，盈亏比大的，周期级别大的（月>周>日）
 2. 新,热点,利好往往翻倍最快，没套牢盘，能吸引资金，这是赚钱最快的方法了，一定要关注等待入场时机或者订单快挂单
 3. 不能自已为是，不要有偏见，不要心存侥幸，而需要客观事实分析。
+
+
+## 资金管理
+1. 同一方向，做单不能超过3单，分别为长线单，中线单，短线单。如果你短线单(<4h)开的过多，那么大盘日线级别的回调你开的所有短线单基本都会打止损
+2. 亏损后，不能因为着急挽回损失，而放大资金成本和增加单子量。这样你不仅会把之前赚的赔完还会把成本赔完
 ##  架构
 
 PB和CPB出现在趋势中，趋势关注回撤的弱势
