--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -18,6 +18,8 @@ categories:
 1. 合约买明确放量的(有庄建仓或出货)，或者买能吸引资金即将放量的(价值低估，利好，月线级别周期) ，盈亏比大的，周期级别大的（月>周>日）
 2. 新,热点,利好往往翻倍最快，没套牢盘，能吸引资金，这是赚钱最快的方法了，一定要关注等待入场时机或者订单快挂单
 3. 不能自已为是，不要有偏见，不要心存侥幸，而需要客观事实分析。
+4. 现货关注市值低,创新,不一定需要什么价值(市值必须很低),有价值更好,只要能在以后成为热点，吸引大资金进入的
+5. 学会打新，买那种1000倍潜力的，成本只需要几百元
 
 
 ## 资金管理
