--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -18,13 +18,16 @@ categories:
 1. 合约买明确放量的(有庄建仓或出货)，或者买能吸引资金即将放量的(价值低估，利好，月线级别周期) ，盈亏比大的，周期级别大的（月>周>日）
 2. 新,热点,利好往往翻倍最快，没套牢盘，能吸引资金，这是赚钱最快的方法了，一定要关注等待入场时机或者订单快挂单
 3. 不能自已为是，不要有偏见，不要心存侥幸，而需要客观事实分析。
-4. 现货关注市值低,创新,不一定需要什么价值(市值必须很低),有价值更好,只要能在以后成为热点，吸引大资金进入的
-5. 学会打新，买那种1000倍潜力的，成本只需要几百元
+4. 现货关注市值低,创新的龙头,不一定需要什么价值(市值必须很低),有价值更好,只要能在以后成为热点，吸引大资金进入的
+5. 现货要打新，买那种1000倍潜力的，成本只需要几百元
+6. 现货只买地底部放巨量（月线或周线）的价值币（有强壮庄），和新的创新币（没有套牢盘，容易拉）才能。或者龙头通缩没有卖压的。
 
 
 ## 资金管理
 1. 同一方向，做单不能超过3单，分别为长线单，中线单，短线单。如果你短线单(<4h)开的过多，那么大盘日线级别的回调你开的所有短线单基本都会打止损
 2. 亏损后，不能因为着急挽回损失，而放大资金成本和增加单子量。这样你不仅会把之前赚的赔完还会把成本赔完
+3. 止损,止盈，当事实发生了，很不利于后面的走势，该平仓要平仓，不能抱有能抗住的心态，不能抱有侥幸心理，宁愿少赚，不能多亏。(以事实为依据，不能以情绪有侥幸心态而舍不得止损)
+4. 止损设置太低犯了3个错误，一个是让你抱有侥幸心理忽略风险(赌，除非你无所谓)，一个是贪和幻想(舍不得降低本金,幻想暴涨)，一个是没有耐心(fomo，怕错过)；对于这种，可以降低本金提高止损或者等待回调入场
 ##  架构
 
 PB和CPB出现在趋势中，趋势关注回撤的弱势
