--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -27,7 +27,14 @@ categories:
 1. 同一方向，做单不能超过3单，分别为长线单，中线单，短线单。如果你短线单(<4h)开的过多，那么大盘日线级别的回调你开的所有短线单基本都会打止损
 2. 亏损后，不能因为着急挽回损失，而放大资金成本和增加单子量。这样你不仅会把之前赚的赔完还会把成本赔完
 3. 止损,止盈，当事实发生了，很不利于后面的走势，该平仓要平仓，不能抱有能抗住的心态，不能抱有侥幸心理，宁愿少赚，不能多亏。(以事实为依据，不能以情绪有侥幸心态而舍不得止损)
-4. 止损设置太低犯了3个错误，一个是让你抱有侥幸心理忽略风险(赌，除非你无所谓)，一个是贪和幻想(舍不得降低本金,幻想暴涨)，一个是没有耐心(fomo，怕错过)；对于这种，可以降低本金提高止损或者等待回调入场
+4. 止损设置太低犯了3个错误，一个是让你抱有侥幸心理忽略风险(赌，除非你无所谓)，一个是贪和幻想(舍不得降低本金,幻想暴涨)，一个是没有耐心(fomo，怕错过)；对于这种，可以降低本金提高止损或者等待回调入场;
+
+
+## 快速亏钱
+1. 在大周期熊市没结束前现货重仓
+2. 现货重仓没有创新，不是龙头，功能还没完善的，没有实际持有价值的小币
+3. 合约止损设置太低，降低胜率，频繁打止损影响心态。由于想极速回本，产生报复赌徒侥幸等心理
+4. 合约同一方向的单数开但量超过3单，一旦大盘不利，8成单利润全部回吐甚至亏损。而且还会影响优质单(提前平仓以弥补损失导致的机会流失)
 ##  架构
 
 PB和CPB出现在趋势中，趋势关注回撤的弱势
