--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -13,6 +13,7 @@ categories:
 >
 > 忧虑，担心，害怕 都是由于幻想的太多，思考的太少
 > 100倍数，可以用合约的50倍得到，也可以现货在低价的时候得到
+`亏损必看`
 
 ## 指南
 1. 合约买明确放量的(有庄建仓或出货)，或者买能吸引资金即将放量的(价值低估，利好，月线级别周期) ，盈亏比大的，周期级别大的（月>周>日）
@@ -36,6 +37,7 @@ categories:
 3. 合约止损设置太低，降低胜率，频繁打止损影响心态。由于想极速回本，产生报复赌徒侥幸等心理
 4. 合约同一方向的单数开但量超过3单，一旦大盘不利，8成单利润全部回吐甚至亏损。而且还会影响优质单(提前平仓以弥补损失导致的机会流失)
 5. 仓位过大，挽回损失的机会就会变小，影响心态情绪，干扰理智
+6. 着急回本,而加大仓位。
 
 
 ## 关于追高
