--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -45,6 +45,27 @@ categories:
 2. 追高是短线,用小资金追，追高后要积极管理，提高止损，切忌不可留恋，一旦追高2次失败，不能再继续了，说明很可能还有大的回调，切忌加大仓位。
 
 
+
+
+
+## 策略
+> 最赚钱的不是技术,而是策略,并不断重复枯燥的去执行
+
+- 现货策略:
+  每周末全部将新币看一次(不然你会错过好项目，一个月十倍的好项目) 
+  不要以没有资金为借口而不去关注其他现货,当你买了一个现货，就不要去看他(会错过别的,资金却占用)，要去发现其他10-100倍项目，涨起来只要热点一来3个月就能到，很容易错过。百倍项目前期一定是生态还不完善，但是叙事宏大，创新。能在未来吸引大资金。无论什么时候百倍币的心不能灭。
+  
+
+- 合约策略:
+  同一方向不超过3单，单子之间不能互相影响(不能因为这个回调亏了，另外一个就因为亏损而提高止损反而被洗下车。)
+  严格止损(不能太高，高就是贪，容易扫损洗下车),不要轻易移动止损(插针洗盘)
+
+- 杠杆策略: 
+  有的确定性很高的，利润空间大的标一定要参与,哪怕本金不足可以用杠杆的400$2倍来投
+
+
+
+
 ##  架构
 
 PB和CPB出现在趋势中，趋势关注回撤的弱势
