--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -11,7 +11,7 @@ categories:
 >
 > 猎人往往是先看到猎物，再等待时机(在批发价入场)
 >
-> 忧虑，担心，害怕 都是由于幻想的太多，思考的太少
+> 忧虑，担心，害怕 都是由于幻想的太多，思考分析的太少
 > 100倍数，可以用合约的50倍得到，也可以现货在低价的时候得到
 `亏损必看`
 
@@ -54,11 +54,18 @@ categories:
 - 现货策略:
   每周末全部将新币看一次(不然你会错过好项目，一个月十倍的好项目) 
   不要以没有资金为借口而不去关注其他现货,当你买了一个现货，就不要去看他(会错过别的,资金却占用)，要去发现其他10-100倍项目，涨起来只要热点一来3个月就能到，很容易错过。百倍项目前期一定是生态还不完善，但是叙事宏大，创新。能在未来吸引大资金。无论什么时候百倍币的心不能灭。
-  
+  买能吸引大资金的:
+    1. 炒价值，对有价值的,在价格<=其价值的时候买入
+    2. 炒预期(正周期才行)，对潜在成长空间很大的,虽然项目不怎么完善，但是能在别人看不起的时候低价进入，后续成长后大资金注入会盈利很大
+    3. 炒热点和热点周边,一般隔几个月就会有个热点，热点能吸引一波热钱，但要注意是否长久
+    4. 炒利好,利好要关注是实质性利好还是预期利好,根据当前盘面做出是否立即入场还是关注
+    5. 炒龙头
+    7. 炒创新，创新代表新事物，市场尚未开拓，记得关注
 
 - 合约策略:
   同一方向不超过3单，单子之间不能互相影响(不能因为这个回调亏了，另外一个就因为亏损而提高止损反而被洗下车。)
   严格止损(不能太高，高就是贪，容易扫损洗下车),不要轻易移动止损(插针洗盘)
+  不能非到期望值止盈,如果盘面已经明确利空信号,那么必须移动止盈减少部分仓位。
 
 - 杠杆策略: 
   有的确定性很高的，利润空间大的标一定要参与,哪怕本金不足可以用杠杆的400$2倍来投
@@ -89,3 +96,7 @@ TST,BOF,BPB 出现在价格在关键位置的弱势表现
 ### CPB
 
 > 趋势内的复杂(多波段，持续时间长)回撤
+
+
+## 信号
+假突破:放量突破但是MACD背离,注意是出货和假突破
