--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -43,6 +43,7 @@ categories:
 ## 关于追高
 1. 十个中有8个是诱多,所以胜率低，只有少数有实质性利好的时候，或者k线形态好的时候可以追
 2. 追高是短线,用小资金追，追高后要积极管理，提高止损，切忌不可留恋，一旦追高2次失败，不能再继续了，说明很可能还有大的回调，切忌加大仓位。
+3. k线形态好的时候可以追, 必须15分钟和5分钟的线都是上行无压力 ，其他线也都是上行无压力
 
 
 
@@ -70,7 +71,11 @@ categories:
 - 杠杆策略: 
   有的确定性很高的，利润空间大的标一定要参与,哪怕本金不足可以用杠杆的400$2倍来投
 
-
+- 空闲时间:
+  关注消息，如果有实质性利空，一定要立即减少仓位，因为大资金会对此做出反应
+  关注大盘走势，风险放在第一位，不利的话切记少操作
+  对于已经买的,不要盯着价格，关键时刻看下K线走势，是否有弱势信号
+  寻找新的机会
 
 
 ##  架构
