--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -52,25 +52,39 @@ categories:
 ## 策略
 > 最赚钱的不是技术,而是策略,并不断重复枯燥的去执行
 
+想赚大钱只能有2种捷径:
+1熊市去发现低价值项目(百倍潜力，最容易被人忽略价值),等到牛市会吸引10-100倍(对于市值大的千万不能重仓,潜力最多10倍,熊市逃脱不了，只能牛市的时候关注下)
+2跟随热点，快速赚钱积累资本:
+想赚快钱就要提高资金效率，跟追热点(热点能吸引大资金)，刚开始上涨20%-50%，一定要及时主动地去了解利好，及时进入,这种很容易翻倍的（大资金进入和消息传播需要时间），往往需要追高或者等回调加仓。不要认为没钱或者钱已经在别的仓位就不去关注热点，如果70%的概率值得，可以选择换仓或者部分换仓提高资金效率，不然只能当看客。
+比如这个项目长时间具有很大潜力，可以长期投资，那么就算追高，可以加大仓位，别人的10倍资金很小，你可以加大10倍仓位，实现认知上的100倍。
+至于跟随热点追高追多少，要看它的潜力空间和持续性。
+
 - 现货策略:
   每周末全部将新币看一次(不然你会错过好项目，一个月十倍的好项目) 
   不要以没有资金为借口而不去关注其他现货,当你买了一个现货，就不要去看他(会错过别的,资金却占用)，要去发现其他10-100倍项目，涨起来只要热点一来3个月就能到，很容易错过。百倍项目前期一定是生态还不完善，但是叙事宏大，创新。能在未来吸引大资金。无论什么时候百倍币的心不能灭。
   买能吸引大资金的:
-    1. 炒价值，对有价值的,在价格<=其价值的时候买入
+    1. 关注价值，对有价值的,在价格<=其价值的时候买入
     2. 炒预期(正周期才行)，对潜在成长空间很大的,虽然项目不怎么完善，但是能在别人看不起的时候低价进入，后续成长后大资金注入会盈利很大
-    3. 炒热点和热点周边,一般隔几个月就会有个热点，热点能吸引一波热钱，但要注意是否长久
-    4. 炒利好,利好要关注是实质性利好还是预期利好,根据当前盘面做出是否立即入场还是关注
+    3. 关注热点和热点周边,一般隔几个月就会有个热点，热点能吸引一波热钱，但要注意是否长久
+    4. 关注利好,利好要关注是实质性利好还是预期利好,根据当前盘面做出是否立即入场还是关注
     5. 炒龙头
-    7. 炒创新，创新代表新事物，市场尚未开拓，记得关注
+    6. 关注新币(无抛压)
+    7. 炒创新(无竞品，资金集中)，创新代表新事物，市场尚未开拓，记得关注
+    8. 关注强庄，庄家喜欢热点板块流通量少的，这种往往底部放量，持续收集资金。
 
 - 合约策略:
   同一方向不超过3单，单子之间不能互相影响(不能因为这个回调亏了，另外一个就因为亏损而提高止损反而被洗下车。)
+  大盘不好(日线周线看跌),要减仓，中途出现的涨都只能减仓(涨是为了诱惑你而出货)，(若非特别实质性利好)千万不能被诱惑加仓，不能长拿。限制在2单以内，一定要留下仓位等跌到位。
   严格止损(不能太高，高就是贪，容易扫损洗下车),不要轻易移动止损(插针洗盘)
   不能非到期望值止盈,如果盘面已经明确利空信号,那么必须移动止盈减少部分仓位。
-
+    
+ 
 - 杠杆策略: 
   有的确定性很高的，利润空间大的标一定要参与,哪怕本金不足可以用杠杆的400$2倍来投
 
+- 止盈止损
+  凡是盈利了1：3之上,获利盘就有了,这时候如果出现了不利的信号，尤其是在关键阻力，一定要减仓，至于减仓的仓位大小，根据情况而定。（不会止盈,一遇到大回调，都是输，已经因为不会止盈连续输了3次了）
+   
 - 空闲时间:
   关注消息，如果有实质性利空，一定要立即减少仓位，因为大资金会对此做出反应
   关注大盘走势，风险放在第一位，不利的话切记少操作
