--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -57,7 +57,7 @@ categories:
 2跟随热点，快速赚钱积累资本:
 想赚快钱就要提高资金效率，跟追热点(热点能吸引大资金)，刚开始上涨20%-50%，一定要及时主动地去了解利好，及时进入,这种很容易翻倍的（大资金进入和消息传播需要时间），往往需要追高或者等回调加仓。不要认为没钱或者钱已经在别的仓位就不去关注热点，如果70%的概率值得，可以选择换仓或者部分换仓提高资金效率，不然只能当看客。
 比如这个项目长时间具有很大潜力，可以长期投资，那么就算追高，可以加大仓位，别人的10倍资金很小，你可以加大10倍仓位，实现认知上的100倍。
-至于跟随热点追高追多少，要看它的潜力空间和持续性。
+至于跟随热点追高追多少，要看它的潜力空间和持续性。如果舍不得大钱，用小钱合约玩
 
 - 现货策略:
   每周末全部将新币看一次(不然你会错过好项目，一个月十倍的好项目) 
