--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -15,6 +15,18 @@ categories:
 > 100倍数，可以用合约的50倍得到，也可以现货在低价的时候得到
 `亏损必看`
 
+## 理论那么多，我该具体做什么
+1.关注热点,和热点周围的生态，哪怕不起眼的meme币,市值低，很容易10倍，这是赚钱最快的办法跟随热点。
+2.行情不好的情况下去寻找1周线回调到位的，放量的。2市值低但是有热点的meme等币或者3有价值的有创新的,总之现货要寻找盈利空间大的，并根据周期情况逐步建仓。
+3.行情不好的情况下合约一定要调整到位，踩线才能入，而且要控制金额不能太大。
+
+
+
+
+
+
+
+
 ## 指南
 1. 合约买明确放量的(有庄建仓或出货)，或者买能吸引资金即将放量的(价值低估，利好，月线级别周期) ，盈亏比大的，周期级别大的（月>周>日）
 2. 新,热点,利好往往翻倍最快，没套牢盘，能吸引资金，这是赚钱最快的方法了，一定要关注等待入场时机或者订单快挂单
@@ -24,13 +36,31 @@ categories:
 6. 现货只买地底部放巨量（月线或周线）的价值币（有强壮庄），和新的创新币（没有套牢盘，容易拉）才能。或者龙头通缩没有卖压的。
 
 
+
+## 把握机会
+信息差: 别人不知道，你知道(链上)；利好你在各渠道优先知道,抢先买入。
+认知差: 大家都知道，但是你了解更深kas，布局早仓位更多拿的更久arkm;利好大家都知道了，但你解读更深，确定是长期利好，投入资金和时间更多。
+执行差: 想到了，有点认知，但是不去真正的查资料等等去做很多功课，不去行动或者行动少，认知也不深入，对于市场反应会有迟钝
+        明知道会跌，但是却不减仓不做出反应，明知道有机会却舍不得之前持有的，不能做出最佳的判断
+竞争差: 更加努力，做的更好 
+
+
+## 选币 - 资金有限，时间就是金钱，选择不同，成就不同
+- 优先新币: 无套牢
+- 投资者: 优先投资名人站台的，强大背景站台的
+- 有创新-竞争少: 该领域无可替代的
+- 潜力价值: 市值能有多大,能吸引多大资金，能涨多少倍
+
+
+
 ## 资金管理
 1. `同一方向，做单不能超过3单`，分别为长线单，中线单，短线单。如果你短线单(<4h)开的过多，那么大盘日线级别的回调你开的所有短线单基本都会打止损
 2. `控制每单仓位成本同周期不能放大`亏损后，不能因为着急挽回损失，而放大资金成本和增加单子量。这样你不仅会把之前赚的赔完还会把成本赔完
 3. `仓位的积极管理，一旦弱势或大盘不稳利空，一定要做出反应哪怕减仓也好` 止损,止盈，当事实发生了，很不利于后面的走势，该平仓要平仓，不能抱有能抗住的心态，不能抱有侥幸心理，宁愿少赚，不能多亏。(以事实为依据，不能以情绪有侥幸心态而舍不得止损)
 4. 止损设置太低犯了3个错误，一个是让你抱有侥幸心理忽略风险(赌，除非你无所谓)，一个是贪和幻想(舍不得降低本金,幻想暴涨)，一个是没有耐心(fomo，怕错过)；对于这种，可以降低本金提高止损或者等待回调入场;
 5. 合约仓位不能过大,留足容错机会。盈利了同周期不能增加，否则又会赔进去。(比如50美金你盈利了很多，但是你骄傲提高了100美金很快机会亏回去，容错率降低了.)
-
+6. 市场在高点(macd和月线都在高潮部分),这时候投资不能超过资金的20%，要等待机会等恐慌后回调接盘。没有机会就跌出机会。
+7. 抄底注意时期，大盘刚开始跌的时候，千万不要抄底，这个时候的拉高都是为了出货，而且大盘会不断震荡下跌，普通的会回调2.3倍，所以不要一跌就抄底。稍微一涨你就追进去了。那都是诱多。
 ## 快速亏钱
 1. 在大周期熊市没结束前现货重仓
 2. 现货重仓没有创新，不是龙头，功能还没完善的，没有实际持有价值的小币
@@ -38,6 +68,15 @@ categories:
 4. 合约同一方向的单数开但量超过3单，一旦大盘不利，8成单利润全部回吐甚至亏损。而且还会影响优质单(提前平仓以弥补损失导致的机会流失)
 5. 仓位过大，挽回损失的机会就会变小，影响心态情绪，干扰理智
 6. 着急回本,而加大仓位。
+
+
+## 赚快钱
+重复策略：
+1关注新币，合理估值（深入了解经济模型），然后等到自己一个合理价位挂单入场。优先选择那些独一无二的创新的竞争少或关注曝光度高或经济模型好，有价值和炒作价值空间，能抗跌，容易吸引大资金，涨的快和猛
+2一定要关注热点事件所带来的机会（如果高位可以少买等回调，根据风险比配置适当的仓位）。因为会吸引人和资金关注。涨的快涨得高。
+及时换仓,比如一个币实现了5倍收益，现在正在高点，但你的目标是10倍，却又一个更好的还没涨的项目，你如果不及时换仓，会错过周期上涨，把时间浪费在了周期回调而错过了时间和金钱
+3追高，如果一个币突然涨1倍，千万不要恐高怕被套就不去关注，因为已经启动了，涨的快，这时一定要去分析估值，只要有2-3倍机会就可以买(可以靠做波段弥补回来)，如果跌了50%就加仓。
+4市场每一天都在变化，1天就可能5倍，所以少管你持有的，更多的关注新的，因为新的可能比你持有的更好。涨的更快更高
 
 
 ## 关于追高
@@ -55,9 +94,14 @@ categories:
 想赚大钱只能有2种捷径:
 1熊市去发现低价值项目(百倍潜力，最容易被人忽略价值),等到牛市会吸引10-100倍(对于市值大的千万不能重仓,潜力最多10倍,熊市逃脱不了，只能牛市的时候关注下)
 2跟随热点，快速赚钱积累资本:
-想赚快钱就要提高资金效率，跟追热点(热点能吸引大资金)，刚开始上涨20%-50%，一定要及时主动地去了解利好，及时进入,这种很容易翻倍的（大资金进入和消息传播需要时间），往往需要追高或者等回调加仓。不要认为没钱或者钱已经在别的仓位就不去关注热点，如果70%的概率值得，可以选择换仓或者部分换仓提高资金效率，不然只能当看客。
+想赚快钱就要提高资金效率，跟追热点(热点能吸引大资金)，刚开始上涨20%-50%，一定要及时主动地去了解利好或者放量有庄(周线级别放量优先)，及时进入,这种很容易翻倍的（大资金进入和消息传播需要时间），往往需要追高或者等回调加仓。不要认为没钱或者钱已经在别的仓位就不去关注热点，如果70%的概率值得，可以选择换仓或者部分换仓提高资金效率，不然只能当看客。
 比如这个项目长时间具有很大潜力，可以长期投资，那么就算追高，可以加大仓位，别人的10倍资金很小，你可以加大10倍仓位，实现认知上的100倍。
 至于跟随热点追高追多少，要看它的潜力空间和持续性。如果舍不得大钱，用小钱合约玩
+3选币，选择对很重要。要全方面的了解这个币和其潜力空间，避免踏空。
+ - 看币的投资人，投资者。（比如wld,arkm投资人 奥特曼，chatgpt创始人）
+ - 看这个币未来的炒作点会在哪里，会因为什么而吸引大量资金。(当下趋势AI,未来很可能AI引爆热点)
+ - 看流通市值以及未来潜力有多少倍
+ - 对比同板块的选出潜力大的
 
 - 现货策略:
   每周末全部将新币看一次(不然你会错过好项目，一个月十倍的好项目) 
@@ -71,12 +115,14 @@ categories:
     6. 关注新币(无抛压)
     7. 炒创新(无竞品，资金集中)，创新代表新事物，市场尚未开拓，记得关注
     8. 关注强庄，庄家喜欢热点板块流通量少的，这种往往底部放量，持续收集资金。
+  
 
 - 合约策略:
   同一方向不超过3单，单子之间不能互相影响(不能因为这个回调亏了，另外一个就因为亏损而提高止损反而被洗下车。)
   大盘不好(日线周线看跌),要减仓，中途出现的涨都只能减仓(涨是为了诱惑你而出货)，(若非特别实质性利好)千万不能被诱惑加仓，不能长拿。限制在2单以内，一定要留下仓位等跌到位。
   严格止损(不能太高，高就是贪，容易扫损洗下车),不要轻易移动止损(插针洗盘)
   不能非到期望值止盈,如果盘面已经明确利空信号,那么必须移动止盈减少部分仓位。
+  大盘回调多考虑挂单做多优质项目，大盘涨多考虑做空。反向思维。
     
  
 - 杠杆策略: 
@@ -92,30 +138,9 @@ categories:
   寻找新的机会
 
 
-##  架构
-
-PB和CPB出现在趋势中，趋势关注回撤的弱势
-
-TST,BOF,BPB 出现在价格在关键位置的弱势表现 
-
-> 预期会对hold住的支撑或阻力的测试
-
-### BOF
-
-> 突破失败，价格突破支撑或阻力后呈现弱势，随后反转
-
-### BPB
-
-> 突破回撤，价格突破支撑阻力后回测后继续前进
-
-### PB 
-
->  趋势内的简单回撤
-
-### CPB
-
-> 趋势内的复杂(多波段，持续时间长)回撤
 
 
-## 信号
-假突破:放量突破但是MACD背离,注意是出货和假突破
+
+
+
+
