--- a/docs/blogs/fx/地狱猎人.md
+++ b/docs/blogs/fx/地狱猎人.md
@@ -33,6 +33,7 @@ categories:
 > 先看最坏的风险能不能接受，再看盈利。否则只看见巨大的盈利，却忽略风险。
 > 有多大把握，用多少仓位和多少倍杠杆，后续根据情况再加，不要怕错过。
 > 资金管理和仓位管理很重要，用多大资金用多少仓位
+> 一定要要有做空思维,做空思维:上涨空间，下跌空间,做出最合理的判断
 
 
 
