--- a/docs/blogs/技术栈/基础知识/基础知识.md
+++ b/docs/blogs/技术栈/基础知识/基础知识.md
@@ -161,6 +161,7 @@ b。它的构造器提供了各种可配置参数,比如线程数量、任务队
         v. 当然，我们还能够实现 RejectedExecutionHandler ，方法自行实现拒绝策略。就比如阿斌公司w用线程池来控制并发，但是希望满了后不丢弃，而是将主线程             阻塞着，等到队列里放得下，再放进去。这个场景比较特殊，是mq，本来就是背压式的消费，所以可以阻塞住。
 * threadFactory : 线程工厂用于创建工作线程，默认线程工厂: Executors.defaultThreadFactory。
                   a我们经常在里面设置线程前缀，还可以做包装，比如执行前后做一些动作.
+* unit:keepAliveTime线程空闲时间的时间单位                 
 
 ```
 
