--- a/docs/blogs/技术栈/基础知识/网络模型.md
+++ b/docs/blogs/技术栈/基础知识/网络模型.md
@@ -92,7 +92,17 @@ TCP的四次挥手是怎样的？
 在浏览器输入URL按下回车，发生了哪些步骤？
 
 
+三次握手四次挥手：
+客户端：你在么
+服务端：我在
+客户端：好的，我知道了
+开始传输数据
 
+客户端：我要关闭链接了
+服务端：等一下
+服务端：可以了
+客户端：拜拜
+数据停止传输
 #### 应用层
 
 
